# psmoveapi

./: CMakeLists.txt
bindings/qt/: CMakeLists.txt  psmoveqt.cpp
debian/: changelog  control  copyright  rules
examples/labs/orientation/: CMakeLists.txt  main.cpp  orientation.h  orientation.pro  orientationview.cpp  orientationview.h
examples/labs/testgui/: CMakeLists.txt  devicechooserdialog.h  main.cpp  psmovesensorscene.cpp  psmovesensorscene.h  psmovetestgui.cpp  psmovetestgui.h  testgui.pro
src/: psmove_orientation.c
src/tracker/: camera_control.c
src/tracker/platform/: camera_control_linux.c  camera_control_win32.c  iniparser_extra.c  iniparser_extra.h
src/utils/: magnetometer_calibration.c
